# spellcheck

./: README.md  pyproject.toml
data/: moby_dick.txt  odyssey.txt
spellcheck/: __init__.py  generate_spellcheck_dict.py  generate_spellcheck_dictionary.py  spellchecker.py
spellcheck_dictionaries/: spellcheck_dictionary.txt
spellchecker/: __init__.py  generate_spellcheck_dict.py  spellcheck.py
test_data/: test_spellchecker_data.csv
tests/: pytest_spellchecker.py  test_spellchecker.py
