[tool.poetry]
name = "spellcheck"
version = "0.1.0"
description = ""
authors = ["Max Barshay <maxbarshay@gmail.com>"]
readme = "README.md"
packages = [{include = "spellcheck"}]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.6.1"
symspellpy = "^6.7.7"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
